<resources>
    <string name="app_name">ScreenlessCats</string>
    <string name="menu_home">Home</string>
    <string name="menu_cats">Cats</string>
    <string name="menu_time">Time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_management_bar">Time management</string>
    <string name="home_bar">Home</string>
    <string name="cats_bar">Cats</string>
    <string name="set_time_button">Set time</string>
    <string name="TimeTemplate">%1$d hours and %2$d minutes</string>
    <string name="zero_time_limit_msg">No time!</string>
    <string name="activate_limit_button_on">Start limit!</string>
    <string name="activate_limit_button_off">End limit</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="warning_end_limit_time">Wait! First you have to end the limit! This implies losing all your progress to get the next cat!</string>
    <string name="i_understand">I understand</string>
    <string name="warning_title_end_limit_time">Wait a moment!</string>
    <string name="warning_title_end_limit">Are you sure?</string>
    <string name="warning_end_limit">Ending your limit will allow you to set new apps and set a new time! However, remember that you will lose the progress to get the next cat :(</string>
    <string name="cancel">Take me back!</string>
    <string name="accept">Accept</string>
    <string name="accessibility_service_description">This accessibility service is used by ScreenlessCats to block apps that had been selected by the user and meet the user requirements to be blocked until there is more time allowed.</string>
    <string name="toast_blocked_app">This app is blocked by ScreenlessCats. You don\'t have more time today.</string>
    <string name="invalid_mail">Invalid Mail</string>
    <string name="invalid_pwd">Password must have 6 or more characters</string>
    <string name="daily_time_left">Daily time left: %1$d hours and %2$d minutes</string>
    <string name="weekly_time_left">Weekly time left: %1$d hours and %2$d minutes</string>
    <string name="cat_hello">Hello!</string>
    <string-array name="cat_phrases">
        <item>Take a break and stretch your legs</item>
        <item>Practice mindfulness to reduce stress</item>
        <item>Set boundaries for device usage</item>
        <item>Engage in physical activities regularly</item>
        <item>Disconnect from screens before bedtime</item>
        <item>Focus on one task at a time</item>
        <item>Take deep breaths and relax</item>
        <item>Engage in meaningful face-to-face conversations</item>
        <item>Unplug and enjoy nature</item>
        <item>Limit social media usage</item>
        <item>Practice digital detox regularly</item>
        <item>Get quality sleep for better well-being</item>
        <item>Prioritize self-care and personal time</item>
        <item>Set realistic goals and prioritize tasks</item>
        <item>Practice gratitude and appreciation</item>
        <item>Take regular breaks from screens</item>
        <item>Engage in hobbies and creative pursuits</item>
        <item>Establish a healthy work-life balance</item>
        <item>Connect with loved ones offline</item>
        <item>Practice digital mindfulness</item>
        <item>Cultivate a positive online environment</item>
        <item>Learn to manage and reduce screen time</item>
        <item>Practice good posture while using devices</item>
        <item>Take time to reflect and recharge</item>
    </string-array>
    <string name="activate_weekly_time_button">Activate weekly time!</string>
    <string name="cat_pop_title">Congrats</string>
    <string name="cat_pop_msg">In exchange of your determination you have received %1$d cats to reward %2$d having the limit activated</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="return_to_login">Return to login</string>
    <string name="send_email">Send Email</string>
    <string name="we_need_accessibility_title">Accessibility settings</string>
    <string name="we_need_accessibility">In order to be able to keep track of used apps and block them when the time ends we need accessibility settings!</string>
    <string name="options_week_starts">Week starts on Monday</string>
    <string name="dedication_v">With dedication value you can increase your probabilities of getting a cat of more quality\n\nYour current dedication value: %.2f.</string>
    <string name="about_us_title">Who we are?</string>
    <string name="about_us">Hello! We are two students of software development in IES Castellet, and we have made this application as a final project. We hope you like our app!</string>
    <string name="amazing">Amazing!</string>
    <string name="help_title">Help</string>
    <string name="help">1. Select the apps you want to limit\n2. Set the time you want to spend on these apps (the time is shared for all the selected apps!)\n3. Start the limit\n\nIf you have used all your daily time, you are going to be able to use weekly time that you can activate only when you have spent all your daily time. This time restarts each week, and it should be used outside common use!\n\nYou are also going to receive cats as a reward for your dedication if you don\'t end your limit.\n\nEnjoy!</string>
    <string name="daily_usage_app_list">%1$d hours and %2$d minutes today</string>
    <string name="we_need_usage_title">Usage settings</string>
    <string name="we_need_usage">We also need app usage permissions, while this is optional, it will allow us to show which apps do you use most.</string>
    <string name="snackbar_perms_needed">Accessibility perms needed. Some functionalities will not work otherwise</string>
    <string name="common_60">Base: 60%%\nNow: %.2f%%</string>
    <string name="rare_22">Base: 22%%\nNow: %.2f%%</string>
    <string name="very_rare_11_5">Base:11.5%%\nNow: %.2f%%</string>
    <string name="epic_5">Base: 5%%\nNow: %.2f%%</string>
    <string name="legendary_1">Base: 1%%\nNow: %.2f%%</string>
    <string name="mythic_0_5">Base: 0.5%%\nNow: %.2f%%</string>
    <string name="common_title">Common</string>
    <string name="rare_title">Rare</string>
    <string name="very_rare_title">Very Rare</string>
    <string name="epic_title">Epic</string>
    <string name="legendary_title">Legendary</string>
    <string name="mythic_title">Mythic</string>
    <string name="info_title">CAT PROBABILITY</string>
    <string name="weekly_time_activated">Weekly time activated!</string>
    <string name="remember_that_this_time_is_not_for_common_use">Remember that this time is not for common use!</string>
    <string name="all_your_selected_apps_are_going_to_be_blocked">All your selected apps are going to be blocked!</string>
    <string name="_10_minutes_left">10 minutes left</string>
    <string name="_5_minutes_left">5 minutes left</string>
    <string name="_1_minute_left">1 minute left</string>
    <string name="of_weekly_time_watch_out">" of weekly time! Watch out!"</string>
    <string name="deactivate_weekly_time">Deactivate weekly time</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="user_registered_successfully">User registered successfully</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="email_sent">Email sent</string>
    <string name="couldn_t_send_email">Couldn\'t send email</string>
    <string name="select_daily_screen_time">Select daily screen time</string>
</resources>